# libdrm-sun4i

./: Makefile.am  Makefile.in  Makefile.sources  config.h.in  configure  configure.ac
debian/: changelog  control  libdrm-sun4i0.install  libdrm-sun4i0.symbols  rules
include/drm/: sun4i_drm.h
sun4i/: Makefile.am  Makefile.in  libdrm_sun4i.pc.in  private.h  sun4i-symbol-check  sun4i.c  sun4i.h
tests/: Makefile.am  Makefile.in
tests/sun4i/: Makefile.am  Makefile.in  openclose.c
tests/util/: kms.c
